use Character.valueOf instead of constructor